# NGE

./: .gitattributes  CMakeLists.txt  README.md
cmake/: NGEConfig.cmake.in
engine/: button.cpp  button.h  color.cpp  color.h  eventHandeling.cpp  eventHandeling.h  level.cpp  level.h  nge.h  renderer.cpp  renderer.h  sound.cpp  sound.h  sprite.cpp  sprite.h  text.cpp  text.h  vec2.h
examples/: CMakeLists.txt  main.cpp
release-headers/: color.h  error.h  eventHandeling.h  sound.h  sprite.h
scripts/: make_release_package.sh  nge_install_sdk.sh  nge_new_project.sh
testGame/: main.cpp
